Fix phrase on mobile

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -6,7 +6,7 @@
     margin-bottom: 2rem;
   }
 
-  .phrase h6 {
+  .phrase h5 {
     margin-bottom: 2rem;
   }
 
@@ -46,6 +46,10 @@
 }
 
 @media (min-width: 768px) {
+  .phrase h6 {
+    font-size: 2rem;
+  }
+
   .board {
     max-width: 75%;
     max-height: 300px;
@@ -67,6 +71,9 @@
 
 
 @media (min-width: 992px) {
+  .phrase h6 {
+    font-size: 2rem;
+  }
   .board {
     max-width: 50%;
     max-height: 300px;
